samples/_failures_safe/1761514092_090bff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d64bbcf.c: In function ‘main’:
./samples/SAFE/__tmp_7d64bbcf.c:162:9: error: expected declaration or statement at end of input
  162 |         printf("Empty input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_7d64bbcf.c:162:9: error: expected declaration or statement at end of input
